--- a/.github/workflows/test_unit.yml
+++ b/.github/workflows/test_unit.yml
@@ -31,5 +31,6 @@ jobs:
         run: |
           python -c "import sys; print(sys.version)"
           python -m pip install --upgrade pip
+          python -m pip install -r requirements.txt
           python -m pip install -r requirements-dev.txt
           python -m pytest tests/unit -vv -rs -x
